// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot: size=0 iteration=1 1`] = `"[0,0]"`;

exports[`Snapshot: size=20 iteration=1 1`] = `
"[0,1]
---[0,0]"
`;

exports[`Snapshot: size=20 iteration=2 1`] = `
"[1,0]
---[0,0]"
`;

exports[`Snapshot: size=50 iteration=1 1`] = `
"[0,1]
---[0,0]"
`;

exports[`Snapshot: size=50 iteration=2 1`] = `
"[1,2]
---[0,2]
------[0,0]
------[0,1]
---------[0,0]
---[1,0]
---[1,1]
------[1,0]"
`;

exports[`Snapshot: size=50 iteration=3 1`] = `
"[0,2]
---[0,0]
---[0,1]
------[0,0]"
`;

exports[`Snapshot: size=50 iteration=4 1`] = `
"[3,2]
---[0,2]
------[0,0]
------[0,1]
---------[0,0]
---[1,2]
------[0,2]
---------[0,0]
---------[0,1]
------------[0,0]
------[1,0]
------[1,1]
---------[1,0]
---[2,2]
------[0,2]
---------[0,0]
---------[0,1]
------------[0,0]
------[1,2]
---------[0,2]
------------[0,0]
------------[0,1]
---------------[0,0]
---------[1,0]
---------[1,1]
------------[1,0]
------[2,0]
------[2,1]
---------[2,0]
---[3,0]
---[3,1]
------[3,0]"
`;

exports[`Snapshot: size=50 iteration=5 1`] = `
"[0,3]
---[0,0]
---[0,1]
------[0,0]
---[0,2]
------[0,0]
------[0,1]
---------[0,0]"
`;
